Enhance Wordle game functionality and UI
- Updated README.md with a detailed description of the game.
- Added a reset button to allow players to restart the game.
- Implemented dynamic target word selection from an external source.
- Improved input handling and game feedback mechanisms.
- Enhanced CSS styles for better visual appeal and user experience.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <input type="text" class="guess-input" maxlength="1" />
         </div>
         <button id="submit-guess">Submit</button>
+        <button id="reset-game">Reset</button>
         <div id="info-message"></div>
     </div>
     <script src="main.js"></script>
